resolve shorcut path

--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/FastRunSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/FastRunSetting.xaml
@@ -25,7 +25,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <ListBox Background="Transparent" IsEnabled="{Binding ElementName=cbx_FastRun,Path=IsChecked}" Name="lst_FastRunItems">
+            <ListBox Background="Transparent" BorderThickness="0" IsEnabled="{Binding ElementName=cbx_FastRun,Path=IsChecked}" Name="lst_FastRunItems">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid>
