--- a/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/Pages/StartupManagement.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/Pages/StartupManagement.xaml
@@ -13,7 +13,7 @@
         <converters:StartupItemConverter x:Key="StartupItemConverter"/>
     </Page.Resources>
     <Grid>
-        <ListBox x:Name="listbox" Style="{StaticResource ListBoxStyle}">
+        <ListBox x:Name="listbox" Style="{StaticResource ListBoxStyle}" Margin="0,0,0,20">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="0,3,0,0" Background="Transparent">
@@ -30,12 +30,15 @@
                         </Grid.RowDefinitions>
 
                         <DockPanel Grid.Row="0" LastChildFill="False">
-                            <Label Content="{Binding Name,Converter={StaticResource StartupItemConverter},ConverterParameter=Name}" FontSize="13" HorizontalAlignment="Left" MinWidth="200" FontWeight="SemiBold" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"/>
-                            <Label Content="{Binding Version,Converter={StaticResource StartupItemConverter},ConverterParameter=Version}" FontSize="15" HorizontalAlignment="Left" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"/>
+                            <Image Source="{Binding Icon}" Width="45" Height="45" DockPanel.Dock="Left" ></Image>
+                            <Label Content="{Binding Name,Converter={StaticResource StartupItemConverter},ConverterParameter=Name}" Margin="5,0,0,0"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" 
+                                   DockPanel.Dock="Left" FontWeight="Bold" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"></Label>
+                            <Label Content="1.0.0.1" VerticalContentAlignment="Center" FontSize="15" HorizontalAlignment="Left" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"/>
                         </DockPanel>
-                        <Label Content="{Binding Description,Converter={StaticResource StartupItemConverter},ConverterParameter=Description}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}" />
-                        <Label Content="{Binding Path,Converter={StaticResource StartupItemConverter},ConverterParameter=Path}" Grid.Row="2" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"/>
-                        <controls:ToggleSwitch Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Right" VerticalAlignment="Center" ToggleSwitchState="{Binding IsEnabled}" Margin="0,0,3,0" SwitchChecked="enable_Checked" SwitchUnChecked="disable_Checked"/>
+                        <Label Content="{Binding Description,Converter={StaticResource StartupItemConverter},ConverterParameter=Description}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}" Margin="2" />
+                        <Label Content="{Binding Path,Converter={StaticResource StartupItemConverter},ConverterParameter=Path}" Grid.Row="2" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}" Margin="2"/>
+                        <controls:ToggleSwitch Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" ToggleSwitchState="{Binding IsEnabled}" Margin="0,0,3,0" SwitchChecked="enable_Checked" SwitchUnChecked="disable_Checked"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
