--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/UserControls/WorkTimeItemControl.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/UserControls/WorkTimeItemControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Master_Zhao.Shell.View.Utility.UserControls.WorkTimeItem"
+﻿<UserControl x:Class="Master_Zhao.Shell.View.Utility.UserControls.WorkTimeItemControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -32,13 +32,13 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <Label Content="处理工作的事情" Foreground="White" FontSize="18" FontFamily="Arial"></Label>
+            <Label Name="lbl_Title" Foreground="White" FontSize="18" FontFamily="Arial"></Label>
 
             <Image Grid.Row="1" HorizontalAlignment="Left" Source="../../../Icon/Utility/play.png" Cursor="Hand" Name="img_start" MouseDown="start_MouseDown"></Image>
             <Image Grid.Row="1" HorizontalAlignment="Left" Source="../../../Icon/Utility/pause.png" Cursor="Hand" Name="img_pause" MouseDown="pause_MouseDown" Visibility="Collapsed"></Image>
-            <Label Content="00:00:34" Grid.Row="1" HorizontalAlignment="Left" FontSize="15" Margin="40,0,0,0" VerticalAlignment="Center"/>
+            <Label Name="lbl_StopWatchEllapsedTime" Grid.Row="1" HorizontalAlignment="Left" FontSize="15" Margin="40,0,0,0" VerticalAlignment="Center"/>
 
-            <Label Content="3 小时 40 分" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="20" FontFamily="Arial"/>
+            <Label Name="lbl_EllapsedTimeString" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="20" FontFamily="Arial"/>
         </Grid>    
     </Border>
 </UserControl>
