--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Windows/WorkTimeCount.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Windows/WorkTimeCount.xaml
@@ -9,7 +9,11 @@
         mc:Ignorable="d"
         Title="WorkTimeCount" Height="450" Width="300" ResizeMode="NoResize"
         ShowInTaskbar="False" MouseMove="BlurWindow_MouseMove" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
-    <StackPanel Name="stack_WorkItems">
-       
-    </StackPanel>
+    <ListBox Background="Transparent" Name="list_WorkItems">
+        <ListBox.ItemTemplate>
+            <DataTemplate>
+                <controls:WorkTimeItemControl Margin="5,0,5,5" Data="{Binding}" Height="30"></controls:WorkTimeItemControl>
+            </DataTemplate>
+        </ListBox.ItemTemplate>
+    </ListBox>
 </Window>
